fix bug and add entity cart